# transcriber

./: README.md  next.config.mjs  package.json  pnpm-lock.yaml
src-tauri/: .env  .gitignore  App.entitlements  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/entity/: cargo.toml
src-tauri/entity/src/: conversation.rs  lib.rs  prelude.rs
src-tauri/migration/: cargo.toml
src-tauri/migration/src/: lib.rs  m20240523_173708_create_conversation_table.rs  m20240523_214940_add_dates_to_conversation_table.rs  m20240523_225333_add_updated_at_to_conversation_table.rs
src-tauri/service/: cargo.toml
src-tauri/service/src/: mutation.rs  query.rs
src-tauri/service/tests/: mock.rs
src-tauri/src/: audio_controller.rs  coreaudio_device.rs  db.rs  device_listener.rs  lib.rs  main.rs  media.rs  recorder.rs  summarize.rs  transcribe.rs  utils.rs  window.rs
src-tauri/src/audio/macos/: aggregate_device.rs  ca_tap_description.rs  helpers.rs  mod.rs
src-tauri/src/commands/: conversation.rs  devices.rs  mod.rs  recording.rs  window.rs
src/app/: index.tsx  page.tsx
src/app/meeting/: page.tsx
src/atoms/: audioDeviceAtom.ts
src/components/audio-recorder/: AudioRecorder.tsx  AudioVisualizer.tsx
src/components/catalyst-ui/: link.tsx
src/components/conversations/table/: Columns.tsx  DataTable.tsx
src/components/layout/: main.tsx  tray.tsx
src/components/media-recorder/: MediaRecorder.tsx
src/components/nav/: BreadcrumbNav.tsx  NavBar.tsx
src/components/recording/: RecordingButton.tsx
src/components/ui/: sheet.tsx  table.tsx
src/context/: AudioDeviceContext.tsx
src/hooks/: README.md  useConversations.tsx  useDb.ts  useIsTray.tsx  useMediaDevices.tsx  useMediaRecorder.tsx  useMeetings.tsx  useRecorder.tsx  useRecording.tsx  useTranscription.tsx
src/lib/: db.ts
src/pages/: _app.tsx  _index.tsx  index.tsx  index_old.tsx  main.tsx  page.tsx  tray.tsx
src/pages/conversations/: [conversation_id].tsx  [id].tsx  new.tsx
src/pages/main/conversations/: [conversation_id].tsx  new.tsx
src/providers/: ClientOnlyProvider.tsx  ConfigurationProvider.tsx  index.tsx
