[package]
name = "platy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
ffmpeg-sidecar = "0.5.1"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs", branch = "master" }
hound = "3.5.1"
cpal = "0.15.3"
anyhow = "1.0.83"
rubato = "0.15.0"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-dialog = "2.0.0-beta.7"
flume = "0.11.0"
futures = "0.3.30"
byteorder = "1.5.0"
coreaudio-rs = "0.12.0"
bindgen = "0.69.4"
core-foundation = "0.9.4"
core-foundation-sys = "0.8.3"
coreaudio-sys = "0.2.15"
libc = "0.2.155"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[lib]
name = "tauri_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
